--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "last-app",
-  "homepage": "http://thomas-hai-li.github.com/last-app",
+  "homepage": "http://thomas-hai-li.github.io/last-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
